# vxde

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: DOCS.md
src/: lib.rs
tests/: parsing_tests.rs
tests/assets/: invalid_sample.vxd  valid_sample.vxd
tests/assets/parsing_tests.rs/: test_basic_parsing.vxd  test_invalid_format.vxd  test_missing_values.vxd  test_parsing_with_newlines.vxd  test_parsing_with_spaces.vxd
